--- a/Practice_webpage_1_Home_ch.html
+++ b/Practice_webpage_1_Home_ch.html
@@ -1,45 +1,207 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="ch-TW">
           <head>
                     <title>Stripes</title>
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
                     <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
-                    <meta name="keywords" content="Stripes,Practice_webpage_1,BenCode2021">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
           </head>
           <body>
-                    <h1 class="website_title">這個網站充滿STRIPS的照片</h1>
-                    <ul id="menu">
-                              <li><a href="Practice_webpage_1_Home_ch.html">首頁</a></li><li><a>關於</a></li>
-                    </ul>
-                    <div style="margin: 20px 10%">
-                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-13_1"src="./image_bin/2022-03-13_1.jpg"></div>
-                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_1"src="./image_bin/2022-03-14_1.jpg"></div>
-                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_2"src="./image_bin/2022-03-14_2.jpg"></div>
+                    <h1 id="title">這網站充滿了Stripes的圖片</h1>
+                    <!-- <p id="test">test</p> -->
+                    <div id="navbar">
+                              <a class="active">首頁</a>
+                              <a>關於</a>
                     </div>
-                    <div class="bottom_tab">
-                              <address>郵件信箱: <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
-                              <p title="language select" style="float: right;">語言 : 中文 <a href="./Practice_webpage_1_Home_en.html">English</a></p>
+                    <div  id="date_table">
+                              <p><strong>去 :</strong></p>
+                              <div>
+                                        <a href="#2022_04">2022_04</a>
+                                        <a href="#2022_03">2022_03</a>
+                              </div>
                     </div>
+                    <div>
+                              <p class="date_bar" id="2022_04">2022_04</p>
+                              <div class="date_container">
+                                        <div class="img_bank">
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-14_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-14_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-14_2.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-14_2.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                        </div>
+                              </div>
+                              <p class="date_bar" id="2022_03">2022_03</p>
+                              <div class="date_container">
+                                        <div class="img_bank">
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                                  <div class="img_container" >
+                                                            <img src="./image_bin/2022-03-13_1.jpg" onmouseover="hover(this)" onmouseout="unhover(this)">
+                                                            <div>
+                                                                      <p>placeholder</p>
+                                                                      <p class="description">description</p>
+                                                            </div>
+                                                  </div>
+                                        </div>
+                              </div>
+                    </div>
+                    <footer>
+                              <div id="footer"">
+                                        <p id="language_select">語言選擇: <a href="./Practice_webpage_1_Home_en.html">英文</a> <a class="active">中文</a></p>
+                              </div>
+                    </footer>
                     <script>
-                              /*
-                              img_hover make the div visable , then gets the image size and change 
-                              the div size to the same, then insert the name of the image which is 
-                              the date of the photo taken in this instence.
-                              */
-                              function img_hover(element){
-                                        var wid=element.childNodes[1].width;
-                                        var hgt=element.childNodes[1].height;
-                                       element.childNodes[0].style.display="block";
-                                       element.childNodes[0].childNodes[0].innerHTML=element.childNodes[1].src.split("/").pop().split("_")[0];
-                                       element.childNodes[0].style.width=wid+"px";
-                                       element.childNodes[0].style.height=hgt+"px";
-                                       element.childNodes[0].style.textAlign="center";
-                                       element.childNodes[0].style.lineHeight=hgt+"px";
-                                       element.childNodes[0].style.lineWidth=wid+"px";
+                              function hover(element){
+                                        var description=element.nextElementSibling;
+                                        // document.getElementById("test").innerHTML=description;
+                                        description.style.visibility="visible";
                               }
-                              function img_unhover(element){
-                                       element.childNodes[0].style.display="none";
+                              
+                              function unhover(element){
+                                        var description=element.nextElementSibling;
+                                        // document.getElementById("test").innerHTML="out";
+                                        description.style.visibility="hidden";
                               }
                     </script>
           </body>
